# Graficacion-por-Computadoras

JuegoDeLaVida/: CMakeLists.txt  README.md
JuegoDeLaVida/include/: Celula.h
JuegoDeLaVida/src/: Celula.cpp  main.cpp
clase3/include/: Vector2.h
clase3/src/: main.cpp
claseSfml/: CMakeLists.txt
claseSfml/include/: Vector2.h
claseSfml/src/: main.cpp
